--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,58 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  background-color: white;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
+  height: 41px;
+  border-bottom: 1px solid #e6e6e6;
+  margin-top: 25px;
 }
+
+.header-left{
+  float: left;
+  font-size: 18px;
+  margin-left: 30px;
+}
+
+.header-right{
+  float: right;
+  font-size: 14px;
+  margin-right: 20px;
+}
+
+.code-wrapper{
+  height: fit-content;
+  width: fit-content;
+  background-color: white;
+  border: 1px solid gray;
+  padding: 10px;
+  border-radius: 3px;
+  margin: 5px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+}
+
+.code-wrapper >header{
+  width: 250px;
+  border-bottom: 1px solid #d2d2d2;
+  font-size: 16px;
+  padding: 5px;
+}
+
+.code-wrapper >footer >div{
+  float: right;
+  padding-top: 10px;
+}
+
+.code-wrapper >div{
+  width: 250px;
+  border-bottom: 1px solid #d2d2d2;
+  font-size: 16px;
+  padding: 5px;
+}
+
+
 
 .App-body {
   background-color: white;
@@ -33,17 +63,4 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: black;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
